--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -32,7 +32,7 @@ jobs:
       #       go.mod
       #       go.sum
       - uses: actions/checkout@v3
-      - run: semgrep ci
+      - run: semgrep ci --config auto
         env:
           SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
         #if: "env.GIT_DIFF_FILTERED != ''"
