--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -10,7 +10,7 @@ on:
   schedule:
     - cron: '0 0 * * 0'
 jobs:
-  # Update from: https://semgrep.dev/docs/semgrep-ci/sample-ci-configs/#github-actions
+  # Update from: https://semgrep.dev/docs/semgrep-ci/sample-ci-configs/#github-actions [removing GH Security Dashboard]
   semgrep:
     name: Scan
     runs-on: ubuntu-latest
@@ -20,19 +20,19 @@ jobs:
     steps:
       - name: Permission issue fix
         run: git config --global --add safe.directory /__w/evmos/evmos
-      # - uses: actions/checkout@v3
-      # - name: Get Diff
-      #   uses: technote-space/get-diff-action@v6.1.0
-      #   with:
-      #     PATTERNS: |
-      #       **/*.go
-      #       **/*.js
-      #       **/*.ts
-      #       **/*.sol
-      #       go.mod
-      #       go.sum
       - uses: actions/checkout@v3
-      - run: semgrep login && semgrep ci
+      - name: Get Diff
+        uses: technote-space/get-diff-action@v6.1.0
+        with:
+          PATTERNS: |
+            **/*.go
+            **/*.js
+            **/*.ts
+            **/*.sol
+            go.mod
+            go.sum
+      - uses: actions/checkout@v3
+      - run: semgrep ci --config=auto
         env:
           SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
         #if: "env.GIT_DIFF_FILTERED != ''"
