--- a/docs/package.json
+++ b/docs/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "preserve": "./pre.sh",
-    "serve": "vuepress dev",
-    "build": "vuepress build",
+    "serve": "trap 'exit 0' SIGINT; vuepress dev --no-cache",
+    "build": "trap 'exit 0' SIGINT; vuepress build  --no-cache",
     "docs:build": "vuepress build docs",
     "postserve": "./post.sh",
     "prebuild": "./pre.sh",
@@ -23,18 +23,24 @@
   "author": "Tharsis",
   "license": "ISC",
   "dependencies": {
+    "@bidoubiwa/vuepress-plugin-element-tabs": "https://github.com/bidoubiwa/vuepress-plugin-element-tabs",
+    "@cosmos-ui/vue": "https://github.com/evmos/docs-ui/#master",
     "entities": "^2.0.3",
     "markdown-it": "^12.3.2",
     "markdown-it-katex": "^2.0.3",
-    "node-sass": "npm:sass@^1.53.0",
-    "vuepress-theme-cosmos": "^1.0.183"
+    "sass": "^1.53.0",
+    "vue-loader": "^16.8.3",
+    "vuepress-theme-cosmos": "https://github.com/evmos/vuepress-theme-cosmos/#updated-dep",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "vuepress-plugin-element-tabs": "^0.2.8",
+    "node-sass": "^7.0.1",
     "watchpack": "^2.3.1"
   },
   "resolutions": {
+    "@cosmos-ui/vue": "@evmos/docs-ui@*",
+    "**/node-sass": "node-sass@*",
     "serialize-javascript": "^4.0.0",
-    "**/node-sass": "npm:sass@*"
+    "vuepress-plugin-element-tabs": "npm:@bidoubiwa/vuepress-plugin-element-tabs@*"
   }
 }
