--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,4 +4,11 @@
 
 image: ghcr.io/notional-labs/cosmos
 
+tasks:
+  - name: install tools
+    command: 
+      go install golang.org/x/tools/cmd/goimports@latest
+      go install mvdan.cc/gofumpt@latest
+      make tools
+
 
