--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,7 +9,7 @@ tasks:
     command: |
       go install golang.org/x/tools/cmd/goimports@latest
       go install mvdan.cc/gofumpt@latest
-      sudo pacman -Syyu clang
+      sudo pacman -Syyu clang --noconfirm
       sudo make tools
       sudo bash scripts/proto-tools-installer.sh
 
