--- a/config.yml
+++ b/config.yml
@@ -18,7 +18,7 @@ init:
       address: "0.0.0.0:8545"     # change the JSON-RPC address and port
       ws-address: "0.0.0.0:8546"  # change the JSON-RPC websocket address and port
 genesis:
-  chain_id: "evmosd_9000-1"
+  chain_id: "point_10711-1"
   app_state:
     staking:
       params:
