--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,9 +3,9 @@ before:
   - go mod download
 
 builds:
-  - id: "evmosd-darwin"
+  - id: "pointd-darwin"
     main: ./cmd/pointd
-    binary: bin/evmosd
+    binary: bin/pointd
     env:
       - CGO_ENABLED=1
       - CC=o64-clang
@@ -17,10 +17,10 @@ builds:
     flags:
         - -tags=cgo
     ldflags:
-      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=evmos -X github.com/cosmos/cosmos-sdk/version.AppName=evmosd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
-  - id: "evmosd-darwin-arm64"
+      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=point -X github.com/cosmos/cosmos-sdk/version.AppName=pointd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
+  - id: "pointd-darwin-arm64"
     main: ./cmd/pointd
-    binary: bin/evmosd
+    binary: bin/pointd
     env:
       - CGO_ENABLED=1
       - CC=oa64-clang
@@ -32,10 +32,10 @@ builds:
     flags:
       - -tags=cgo
     ldflags:
-      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=evmos -X github.com/cosmos/cosmos-sdk/version.AppName=evmosd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
-  - id: "evmosd-linux"
+      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=point -X github.com/cosmos/cosmos-sdk/version.AppName=pointd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
+  - id: "pointd-linux"
     main: ./cmd/pointd
-    binary: bin/evmosd
+    binary: bin/pointd
     env:
       - CGO_ENABLED=1
       - CC=gcc
@@ -47,10 +47,10 @@ builds:
     flags:
       - -tags=cgo
     ldflags:
-      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=evmos -X github.com/cosmos/cosmos-sdk/version.AppName=evmosd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
-  - id: "evmosd-linux-arm64"
+      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=point -X github.com/cosmos/cosmos-sdk/version.AppName=pointd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
+  - id: "pointd-linux-arm64"
     main: ./cmd/pointd
-    binary: bin/evmosd
+    binary: bin/pointd
     env:
       - CGO_ENABLED=1
       - CC=aarch64-linux-gnu-gcc
@@ -62,10 +62,10 @@ builds:
     flags:
       - -tags=cgo
     ldflags:
-      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=evmos -X github.com/cosmos/cosmos-sdk/version.AppName=evmosd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
-  - id: "evmosd-windows"
+      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=point -X github.com/cosmos/cosmos-sdk/version.AppName=pointd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
+  - id: "pointd-windows"
     main: ./cmd/pointd
-    binary: bin/evmosd
+    binary: bin/pointd
     env:
       - CGO_ENABLED=1
       - CC=x86_64-w64-mingw32-gcc
@@ -78,7 +78,7 @@ builds:
       - -tags=cgo
       - -buildmode=exe
     ldflags:
-      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=evmos -X github.com/cosmos/cosmos-sdk/version.AppName=evmosd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
+      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=point -X github.com/cosmos/cosmos-sdk/version.AppName=pointd -X github.com/cosmos/cosmos-sdk/version.Version={{.Version}} -X github.com/cosmos/cosmos-sdk/version.Commit={{.Commit}}
 
 archives:
 - name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
@@ -91,11 +91,11 @@ archives:
     - goos: windows
       format: zip
   builds:
-  - evmosd-darwin
-  - evmosd-darwin-arm64
-  - evmosd-windows
-  - evmosd-linux
-  - evmosd-linux-arm64
+  - pointd-darwin
+  - pointd-darwin-arm64
+  - pointd-windows
+  - pointd-linux
+  - pointd-linux-arm64
 
 checksum:
   name_template: 'checksums.txt'
