--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: docker.io
-          username: tharsishq
+          username: pointnetwork
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
