--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -7,6 +7,11 @@ on:
 
 jobs:
   Gosec:
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
+
     runs-on: ubuntu-latest
     env:
       GO111MODULE: on
@@ -24,7 +29,7 @@ jobs:
         uses: informalsystems/gosec@master
         with:
           # we let the report trigger content trigger a failure using the GitHub Security features.
-          args: '-no-fail -fmt sarif -out results.sarif ./...'
+          args: "-no-fail -fmt sarif -out results.sarif ./..."
         if: "env.GIT_DIFF_FILTERED != ''"
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
