--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,7 +24,7 @@ jobs:
             go.mod
             go.sum
       - name: Run Gosec Security Scanner
-        uses: informalsystems/gosec@master
+        uses: cosmos/gosec@master
         with:
           # we let the report trigger content trigger a failure using the GitHub Security features.
           args: "-no-fail -fmt sarif -out results.sarif ./..."
